--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .player {
   max-width: 80vw;
-  min-width: 800px;
+  min-width: 90%;
   border: 5px solid black;
   border-radius: 10px;
   background: black;
