--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ video {
   transition: opacity 0.5s ease-out 2s;
 }
 
+@media (hover: none) {
+  .controls-container {
+    opacity: 0.75;
+  }
+}
+
 .show-controls:hover .controls-container {
   opacity: 1;
   transition: opacity 0.2s ease-out;
